Fixed spacing and made light version printer friendly

--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
 @media print and (prefers-color-scheme: light) {
     :root {
         --background: #FFF;
+        --bio-text: #FFF;
     }
 }
 
@@ -64,7 +65,7 @@ body {
 }
 
 a, a:hover {
-    color: white;
+    color: inherit;
 }
 
 h3 {
@@ -86,7 +87,7 @@ h6 {
     width: 100%;
 }
 
-@media screen and (max-width: 1042px) {
+@media screen and (max-width: 1060px) {
     .grid-container {
         display: grid;
         grid-template-columns: 1fr;
@@ -117,7 +118,7 @@ h6 {
     margin-right: 2rem;
 }
 
-@media screen and (max-width: 1042px) {
+@media screen and (max-width: 1060px) {
     .header-content {
         flex-direction: row-reverse;
         height: auto;
@@ -158,7 +159,7 @@ h6 {
     font-size: 2rem;;
 }
 
-@media screen and (max-width: 1042px) {
+@media screen and (max-width: 1060px) {
     .bio {
         overflow-y: visible;
     }
@@ -217,6 +218,12 @@ ul.connected li:after {
 
 ul.connected li.subitem:after {
     content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='20' width='20'%3E%3Ccircle cx='10' cy='10' r='7' fill='%23079992' /%3E%3Ccircle cx='10' cy='10' r='3' fill='%23454545' /%3E%3C/svg%3E");
+}
+
+@media (prefers-color-scheme: light) {
+    ul.connected li.subitem:after {
+       content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='20' width='20'%3E%3Ccircle cx='10' cy='10' r='7' fill='%23079992' /%3E%3Ccircle cx='10' cy='10' r='3' fill='%23fff' /%3E%3C/svg%3E");
+   }
 }
 
 ul.connected li:before {
@@ -301,33 +308,38 @@ ul.connected li:last-child:before {
 
 .skill-container-grid {
     display: grid;
-    grid-template-columns: auto auto;
+    /*grid-template-columns: auto auto;*/
+    grid-template-columns: max-content max-content;
+    column-gap: 3rem;
+}
+
+.skill-grid {
+    display: grid;
+    grid-template-columns: 1fr min-content;
+    margin-left: 1.5rem;
+    margin-bottom: 1.5rem;
     column-gap: 1.5rem;
 }
 
 @media screen and (max-width: 870px) {
     .skill-container-grid {
-        grid-template-columns: auto;
+        grid-template-columns: max-content;
     }
 }
 
+@media screen and (min-width: 1061px) and (max-width: 1160px) {
+    .skill-container-grid {
+        column-gap: 1.5rem;
+    }
 
-.skill-grid {
-    display: grid;
-    grid-template-columns: 9rem 1fr;
-    margin-bottom: 1.5rem;
-    column-gap: 1.5rem;
+    .skill-grid {
+        margin-left: 1rem;
+    }
 }
 
 .skill-grid span {
     text-align: right;
     margin-bottom: 0.3rem;
-}
-
-@media (prefers-color-scheme: light) {
-     ul.connected li.subitem:after {
-        content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' height='20' width='20'%3E%3Ccircle cx='10' cy='10' r='7' fill='%23079992' /%3E%3Ccircle cx='10' cy='10' r='3' fill='%23fff' /%3E%3C/svg%3E");
-    }
 }
 
 @media print {
@@ -369,6 +381,8 @@ ul.connected li:last-child:before {
         -webkit-print-color-adjust: exact;
     }
 
+    
+
     .bio {
         background: var(--background) !important;
         -webkit-print-color-adjust: exact;
@@ -401,3 +415,17 @@ ul.connected li:last-child:before {
     }
  }
  
+ 
+@media print and (prefers-color-scheme: light) {
+   .header {
+       background: var(--background) !important;
+       color: var(--text) !important;
+       -webkit-print-color-adjust: exact;
+       border-right: 4px solid var(--accent);
+   }
+
+   .image {
+       border-color: var(--accent);
+       background: var(--accent);
+   }
+}
